--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+  <p>Work in progress...</p>
+  <p>Awaiting to be updated by my creator.</p>
 </body>
 </html>
